Fix JAVA_OPTIONS and set default ram to 80%